fix(ui): DOMA-6376 change visibility hidden to display none

--- a/packages/ui/src/components/Tabs/style.less
+++ b/packages/ui/src/components/Tabs/style.less
@@ -60,7 +60,7 @@
   &-rounded {
     & > .condo-tabs-nav {
       .condo-tabs-ink-bar {
-        visibility: hidden;
+        display: none;
       }
 
       .condo-tabs-tab {
@@ -79,10 +79,6 @@
 
         & > .condo-tabs-tab-btn {
           color: @condo-global-color-black;
-        }
-
-        & .condo-tabs-ink-bar {
-          visibility: hidden;
         }
       }
     }
